# virtour-server

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
mcp_server/: mcp.py
rag/: base.txt  rag.py  requirements.txt
src/: main.py
src/assets/: config.json  positions.json
src/assets_yihe/: positions.json
src/mcp_server/: mcp.py  mcp_server.py  tools.json
src/rag/: base.txt  embedding.py  initializer.py  rag.py  rag_service.py  rag_utils.py  utils.py
src/tts/: speech_to_text.py  text_speech_synthesis.py  tts_service.py  tts_utils.py
src/tts/xunfei/: text_speech_synthesis.py
tts/: text_speech_synthesis.py  tts_service.py  tts_xunfei_service.py
