[project]
name = "virtour-server"
version = "0.1.0"
description = "第十八届中国大学生计算机设计大赛虚拟文旅项目后端"
authors = [{ name = "你的名字", email = "you@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "av==14.3.0",
    "click==8.2.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "edge-tts==7.0.2",
    "environs==14.2.0",
    "faiss-cpu==1.11.0",
    "faiss-gpu==1.7.2",
    "fastapi==0.115.13",
    "fastapi-cors==0.0.6",
    "ffmpeg-python==0.2.0",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "future==1.0.0",
    "hf-xet==1.1.4",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.33.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpointer==2.1",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-huggingface==0.3.0",
    "langsmith==0.3.45",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "mcp==1.5.0",
    "msgpack==1.1.1",
    "multidict==6.5.0",
    "mypy_extensions==1.1.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "openai==1.68.2",
    "pillow==11.2.1",
    "propcache==0.3.2",
    "pydantic-settings==2.9.1",
    "pydub==0.25.1",
    "PySocks",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "requests-toolbelt",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "sentence-transformers==4.1.0",
    "socksio==1.0.0",
    "SQLAlchemy==2.0.39",
    "srt==3.5.3",
    "sse-starlette==2.2.1",
    "starlette",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.5.0",
    "transformers==4.50.3",
    "triton==3.1.0",
    "typing-inspect==0.9.0",
    "typing-inspection",
    "typing_extensions",
    "uvicorn==0.34.3",
    "vosk==0.3.45",
    "websockets==15.0.1",
    "yarl==1.20.1",
    "zstandard"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.pdm.scripts]
start = "python src/main.py"
test = "pytest"